[tool.poetry]
name = "gdvm"
version = "0.1.0"
description = ""
authors = ["firesquid6 <jdeiss06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = "6.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
